--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "type": "library",
     "description": "A simple PHP wrapper for the CollectiveAccess web service API",
     "keywords": ["collectiveaccess", "providence"],
-    "homepage": "http://www.collectiveaccess.org",
+    "homepage": "https://www.collectiveaccess.org",
     "license": "GPL3",
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.6.0"
     },
     "autoload": {
         "psr-0" : {
