--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "A simple PHP wrapper for the CollectiveAccess web service API",
     "keywords": ["collectiveaccess", "providence"],
     "homepage": "https://www.collectiveaccess.org",
-    "license": "GPL3",
+    "license": "GPL-3.0-or-later",
     "require": {
         "php": ">=5.6.0"
     },
